2013-01-23 Simon Large
    * src/commands.c src/atmel.c src/atmel.h
      Check the security fuse state for AVR32 to give a better error message.

2013-01-22 Simon Large
    * doc/dfu-programmer.html
      Add an html version of the man page.

2013-01-20 Simon Large
    * src/commands.c src/arguments.c src/arguments.h
      src/atmel.c src/atmel.h
      Add a new command to set the security fuse in AVR32 devices.

2013-01-19 Simon Large
    * src/commands.c src/dfu.c
      Improve some error messages.

2013-01-19 Simon Large
    * src/arguments.c
      Better presentation of help text.
      Use some simple switches for basic help:
      --help, --targets, --version.

2013-01-18 Simon Large, Kees Bakker
    * src/atmel.c
      Correct eeprom selection in dump-eeprom. The protcol
      differs between AVR and AVR32 families.

2013-01-18 Simon Large
    * src/arguments.c src/atmel.c src/commands.c src/dfu-device.h
      Better handling of device->type to make it easier to
      cover additional device classes (e.g. XMega)

2013-01-18 Simon Large
    * src/arguments.c
      Show target list in 4 columns

2013-01-18 Simon Large, Dmitry Nedospasov, Kees Bakker
    * src/arguments.c src/arguments.h
      Add definitions for atxmega devices

2013-01-18 Simon Large
    * windows/atmel_usb_dfu.inf
      Correct label for atxmega64a3u

2012-12-22 Simon Large
    * windows configwin.sh README:
      Include the libusb-win32 1.2.2 lib and header files
      which go with the Atmel-compiled 1.2.2 driver.

2012-12-21 Simon Large
    * src/arguments.c arguments.h: Add support for atmega16u2

2012-12-21 Simon Large
    * configure.ac: Correct the sense of the --disable-libusb_1_0
      switch. If PKG_CHECK_MODULES is not defined, assume libusb 1.0
      is available. Bug 3597941.

2012-12-20 Simon Large
    * src/atmel.c: Test a pointer for NULL before using it.
      One instance was suggested in bug 3464910 and several
      more were found in the same file.
