@@ -1,4 +1,9 @@
 2013-01-23 Simon Large
+    * src/commands.c src/arguments.c
+      Do not attempt eeprom operations on devices without.
+      Report unrecognised target device name better.
+
+2013-01-23 Simon Large
     * src/commands.c src/atmel.c src/atmel.h
       Check the security fuse state for AVR32 to give a better error message.
 
